--- a/lambdatimes/src/CSS/index.css
+++ b/lambdatimes/src/CSS/index.css
@@ -8,25 +8,33 @@
   font-family: 'PT Sans';
   font-style: italic;
   font-weight: 400;
-  src: local('PT Sans Italic'), local('PTSans-Italic'), url(https://fonts.gstatic.com/s/ptsans/v9/jizYRExUiTo99u79D0e0x8mN.ttf) format('truetype');
+  src: local('PT Sans Italic'), local('PTSans-Italic'),
+    url(https://fonts.gstatic.com/s/ptsans/v9/jizYRExUiTo99u79D0e0x8mN.ttf)
+      format('truetype');
 }
 @font-face {
   font-family: 'PT Sans';
   font-style: italic;
   font-weight: 700;
-  src: local('PT Sans Bold Italic'), local('PTSans-BoldItalic'), url(https://fonts.gstatic.com/s/ptsans/v9/jizdRExUiTo99u79D0e8fOydLxUY.ttf) format('truetype');
+  src: local('PT Sans Bold Italic'), local('PTSans-BoldItalic'),
+    url(https://fonts.gstatic.com/s/ptsans/v9/jizdRExUiTo99u79D0e8fOydLxUY.ttf)
+      format('truetype');
 }
 @font-face {
   font-family: 'PT Sans';
   font-style: normal;
   font-weight: 400;
-  src: local('PT Sans'), local('PTSans-Regular'), url(https://fonts.gstatic.com/s/ptsans/v9/jizaRExUiTo99u79D0KEwA.ttf) format('truetype');
+  src: local('PT Sans'), local('PTSans-Regular'),
+    url(https://fonts.gstatic.com/s/ptsans/v9/jizaRExUiTo99u79D0KEwA.ttf)
+      format('truetype');
 }
 @font-face {
   font-family: 'PT Sans';
   font-style: normal;
   font-weight: 700;
-  src: local('PT Sans Bold'), local('PTSans-Bold'), url(https://fonts.gstatic.com/s/ptsans/v9/jizfRExUiTo99u79B_mh0O6tKA.ttf) format('truetype');
+  src: local('PT Sans Bold'), local('PTSans-Bold'),
+    url(https://fonts.gstatic.com/s/ptsans/v9/jizfRExUiTo99u79B_mh0O6tKA.ttf)
+      format('truetype');
 }
 * {
   box-sizing: border-box;
@@ -161,8 +169,8 @@ body {
   flex: 1;
 }
 .content-container {
-  display: flex; 
-  flex-direction: column; 
+  display: flex;
+  flex-direction: column;
   align-items: center;
 }
 .tabs {
@@ -174,6 +182,7 @@ body {
   width: 100%;
   height: 47px;
   background-color: #fff;
+  padding: 0.2rem;
 }
 @media (min-width: 1280px) {
   .tabs {
@@ -185,11 +194,13 @@ body {
   justify-content: none;
   align-items: center;
   flex-direction: row;
+  padding: 0.2rem;
 }
 .tabs .topics .title {
   font-size: 12px;
   letter-spacing: 1px;
   font-weight: bold;
+  padding: 0.2rem;
 }
 .tabs .topics .tab {
   display: flex;
@@ -204,6 +215,7 @@ body {
   letter-spacing: 2px;
   cursor: pointer;
   font-weight: bold;
+  padding: 0.5rem;
 }
 .tabs .topics .tab:hover {
   text-decoration: underline;
@@ -211,6 +223,9 @@ body {
 .tabs .topics .active-tab {
   background-color: #fff;
   color: #333;
+  font-size: 12px;
+  padding: 0.5rem;
+  font-weight: 700;
   border: 2px solid #333;
 }
 .cards-container {
